# zen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.zig  build.zig.zon  main.cpp  prd.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml  security.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml  sanitizers.yml
compiler/include/: zen.h
compiler/src/analysis/error_system/: catch_expressions.h  error_propagation.c  error_propagation.h  result_types.c  result_types.h  try_else.c  try_else.h
compiler/src/analysis/optimization/: optimizer.h
compiler/src/analysis/semantic/: scope.h  semantic_analyzer.h  symbol_table.h
compiler/src/analysis/types/: arrays.c  arrays.h  custom_types.c  custom_types.h  generics.h  optionals.c  optionals.h  type_system.c  type_system.h
compiler/src/codegen/: codegen.c  codegen.h  native_codegen.c  native_codegen.h
compiler/src/codegen/backends/c/: c_generator.h
compiler/src/codegen/backends/llvm/: llvm_codegen.h
compiler/src/codegen/backends/wasm/: wasm_codegen.c  wasm_codegen.h
compiler/src/diagnostics/: diagnostics.h  error_formatting.h  suggestions.h
compiler/src/frontend/ast/: ast.c  ast_visitor.c  ast_visitor.h
compiler/src/frontend/lexer/: string_interpolation.c  string_interpolation.h
compiler/src/frontend/parser/: expressions.c  parser.c  parser.h  statements.c  types.c
compiler/src/integrations/hotpatch/: dlopen_manager.h  hotpatch.h
compiler/src/integrations/typescript/: dts_generator.c  dts_generator.h  npm_package.c  npm_package.h  wrapper_generator.c  wrapper_generator.h
compiler/src/stdlib/: builtin_functions.h
compiler/src/targets/: conditional_compilation.c  conditional_compilation.h  target_system.c  target_system.h
compiler/src/utils/: hashmap.c  hashmap.h  memory.c  memory.h  vector.c  vector.h
examples/: README.md  arithmetic.zen  basic.zen  calculator.zen  fibonacci.zen  hello.zen  hello_word.zen  hello_world.zen  if_statement.zen  multi_target.zen  simple.zen  types_and_structs.zen
src/: advanced_analysis.zig  ast.c  ast.h  ast.zig  checker.zig  codegen.c  codegen.h  codegen.zig  errors.zig  lexer.c  lexer.h  lexer.zig  main.c  main.zig  native_codegen.c  native_codegen.h  parser.c  parser.h  parser.zig  root.zig  semantic.zig  semantic_test.zig  types.zig  unicode.zig
src/ast/: ast_node.h
src/codegen/: llvm_codegen.cpp  llvm_codegen.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
tools/zen-doc/: CMakeLists.txt
tools/zen-doc/src/: doc_generator.c
tools/zen-fmt/: CMakeLists.txt
tools/zen-fmt/src/: formatter.c
tools/zen-pkg/: CMakeLists.txt
tools/zen-pkg/src/: package_manager.c
tools/zen-test/: CMakeLists.txt
tools/zen-test/src/: test_runner.c
